--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -17,18 +17,14 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2023-08-21 20:33:11.673577: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2023-08-21 20:33:12.428896: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-            "/usr/lib/python3/dist-packages/requests/__init__.py:87: RequestsDependencyWarning: urllib3 (2.0.4) or chardet (4.0.0) doesn't match a supported version!\n",
-            "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n",
-            "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-            "/usr/lib/python3/dist-packages/requests/__init__.py:87: RequestsDependencyWarning: urllib3 (2.0.4) or chardet (4.0.0) doesn't match a supported version!\n",
-            "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33myecanlee\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'tensorflow'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\ra78lof\\TransFlatUNet\\notebooks\\baseline.ipynb Cell 2\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ra78lof/TransFlatUNet/notebooks/baseline.ipynb#W1sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msklearn\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ra78lof/TransFlatUNet/notebooks/baseline.ipynb#W1sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split, StratifiedGroupKFold\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/ra78lof/TransFlatUNet/notebooks/baseline.ipynb#W1sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ra78lof/TransFlatUNet/notebooks/baseline.ipynb#W1sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msegmentation_models_pytorch\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msmp\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ra78lof/TransFlatUNet/notebooks/baseline.ipynb#W1sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtimm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlayers\u001b[39;00m \u001b[39mimport\u001b[39;00m DropPath, to_2tuple, trunc_normal_\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
           ]
         }
       ],
@@ -36,18 +32,12 @@
         "#Import the libraries\n",
         "#from Starscream import TransUNet\n",
         "\n",
-        "import pandas as pd\n",
         "import numpy as np\n",
         "import time\n",
         "import os\n",
         "import random\n",
-        "import math\n",
-        "import matplotlib.pyplot as plt\n",
         "from tqdm.notebook import tqdm\n",
         "from glob import glob\n",
-        "\n",
-        "from IPython import display\n",
-        "from matplotlib.patches import Rectangle\n",
         "\n",
         "import time\n",
         "import copy\n",
@@ -55,17 +45,15 @@
         "import h5py\n",
         "\n",
         "# Import the machine learning libraries\n",
-        "import sklearn\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "import torch.optim as optim\n",
         "from torch.utils.data import Dataset, DataLoader\n",
         "from torch.optim import lr_scheduler\n",
-        "from torch.cuda import amp\n",
-        "import sklearn\n",
+        "# from torch.cuda import amp\n",
         "from sklearn.model_selection import train_test_split, StratifiedGroupKFold\n",
-        "import tensorflow as tf\n",
+        "# import tensorflow as tf\n",
         "import segmentation_models_pytorch as smp\n",
         "\n",
         "from timm.models.layers import DropPath, to_2tuple, trunc_normal_\n",
@@ -74,10 +62,10 @@
         "from einops import rearrange\n",
         "\n",
         "# For exponential moving average\n",
-        "from ema_pytorch import EMA\n",
+        "# from ema_pytorch import EMA\n",
         "\n",
         "# For cool stuff\n",
-        "from colorama import Fore, Back, Style\n",
+        "# from colorama import Fore, Back, Style\n",
         "\n",
         "# Import the monitoring libraries\n",
         "import wandb\n",
@@ -90,7 +78,7 @@
         "# For debug\n",
         "# For RAM usage\n",
         "import gc # automatic garbage collector\n",
-        "os.environ['CUDA_LAUNCH_BLOCKING'] = '1'\n",
+        "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'\n",
         "os.environ[\"WANDB_NOTEBOOK_NAME\"] = \"shockwave.ipynb\"\n",
         "# In case we have a run out of memory problem\n",
         "\n",
@@ -99,7 +87,7 @@
         "from albumentations.pytorch import ToTensorV2\n",
         "\n",
         "# REMEBER TO MOVE THIS BEFORE PUBLISHING!\n",
-        "import sys"
+        "# import sys"
       ]
     },
     {
@@ -1337,7 +1325,7 @@
         "    hours, remainder = divmod(elapsed_time, 3600)\n",
         "    minutes, seconds = divmod(remainder, 60)\n",
         "    print(f'Training complete in {hours:.0f}h {minutes:.0f}m {seconds:.0f}s')\n",
-        "    print(f\"Best Score: {best_jaccard:.4f}\")\n",
+        "    print(f\"Best Jaccard: {best_jaccard:.4f}\")\n",
         "\n",
         "    wandb.log({\"Training Time\": elapsed_time})\n",
         "\n",
@@ -1588,7 +1576,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.9.0"
     }
   },
   "nbformat": 4,
